# gic-ipsec-client

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: fedora-rpm-package.yml  ubuntu-deb-package.yml
debian/: changelog
docs/: fortigate-profile.md  sample-swanctl-output.md  security-model.md  troubleshooting.md
packaging/: build-packages.sh  defaults.json  gic-ipsec-client.desktop  nfpm.yaml  see-ipsec-client.desktop
packaging/fedora/: gic-ipsec-client.spec  install-deps.sh  validate-swanctl-provider.sh
packaging/libexec/: gic-ipsec-helper  see-ipsec-helper
packaging/polkit/: com.gicipsec.client.policy  com.see.ipsecclient.policy
packaging/systemd/: gic-ipsec-helper.service.example  see-ipsec-helper.service.example
packaging/ubuntu/: install-deps.sh
scripts/: bump-package-release.sh  bump-version.sh  validate-package-version.sh
src/gic_ipsec_client/: __init__.py  __main__.py  _version.py  main.py
src/gic_ipsec_client/backend/: __init__.py  commands.py  diagnostics.py  models.py  renderer.py  resolved.py  secrets.py  settings.py  strongswan.py  swanctl_paths.py  validators.py
src/gic_ipsec_client/gui/: __init__.py  log_viewer.py  main_window.py  profile_editor.py  status_panel.py  workers.py
src/gic_ipsec_client/helper/: __init__.py  cli.py  privileged.py
tests/: test_command_safety.py  test_diagnostics_redaction.py  test_gui_threading.py  test_helper_privileged.py  test_multisite_packaging.py  test_profile_validation.py  test_resolved_dns.py  test_swanctl_rendering.py
